[package]
name = "tura"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
color-eyre = "0.6.3"
crossterm = "0.28.1"
ratatui = "0.29.0"
rodio = { version = "0.21.0"}
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0"
strsim = "0.11.1"
thiserror = "2"
